Refactor reply markup sections for improved readability and consistency in examples

--- a/index.html
+++ b/index.html
@@ -304,9 +304,7 @@
 
             <!-- Reply Markup -->
             <div class="param-section">
-              <div class="param-section-header collapsed">
-                ⌨️ Reply Markup
-              </div>
+              <div class="param-section-header collapsed">⌨️ Reply Markup</div>
               <div class="param-section-content collapsed">
                 <div class="form-group">
                   <label for="replyMarkup">Reply Markup (JSON):</label>
@@ -316,23 +314,40 @@
                     rows="4"
                   ></textarea>
                   <small
-                    >JSON object for inline keyboard, reply keyboard, remove keyboard, or force reply</small
+                    >JSON object for inline keyboard, reply keyboard, remove
+                    keyboard, or force reply</small
                   >
                 </div>
-                
+
                 <div class="form-group">
                   <label>Common Examples:</label>
                   <div class="markup-examples">
-                    <button type="button" class="example-btn" onclick="setReplyMarkupExample('inline')">
+                    <button
+                      type="button"
+                      class="example-btn"
+                      onclick="setReplyMarkupExample('inline')"
+                    >
                       Inline Keyboard
                     </button>
-                    <button type="button" class="example-btn" onclick="setReplyMarkupExample('keyboard')">
+                    <button
+                      type="button"
+                      class="example-btn"
+                      onclick="setReplyMarkupExample('keyboard')"
+                    >
                       Reply Keyboard
                     </button>
-                    <button type="button" class="example-btn" onclick="setReplyMarkupExample('remove')">
+                    <button
+                      type="button"
+                      class="example-btn"
+                      onclick="setReplyMarkupExample('remove')"
+                    >
                       Remove Keyboard
                     </button>
-                    <button type="button" class="example-btn" onclick="setReplyMarkupExample('force')">
+                    <button
+                      type="button"
+                      class="example-btn"
+                      onclick="setReplyMarkupExample('force')"
+                    >
                       Force Reply
                     </button>
                   </div>
@@ -596,9 +611,7 @@
 
             <!-- Reply Markup -->
             <div class="param-section">
-              <div class="param-section-header collapsed">
-                ⌨️ Reply Markup
-              </div>
+              <div class="param-section-header collapsed">⌨️ Reply Markup</div>
               <div class="param-section-content collapsed">
                 <div class="form-group">
                   <label for="photoReplyMarkup">Reply Markup (JSON):</label>
@@ -608,23 +621,40 @@
                     rows="4"
                   ></textarea>
                   <small
-                    >JSON object for inline keyboard, reply keyboard, remove keyboard, or force reply</small
+                    >JSON object for inline keyboard, reply keyboard, remove
+                    keyboard, or force reply</small
                   >
                 </div>
-                
+
                 <div class="form-group">
                   <label>Common Examples:</label>
                   <div class="markup-examples">
-                    <button type="button" class="example-btn" onclick="setPhotoReplyMarkupExample('inline')">
+                    <button
+                      type="button"
+                      class="example-btn"
+                      onclick="setPhotoReplyMarkupExample('inline')"
+                    >
                       Inline Keyboard
                     </button>
-                    <button type="button" class="example-btn" onclick="setPhotoReplyMarkupExample('keyboard')">
+                    <button
+                      type="button"
+                      class="example-btn"
+                      onclick="setPhotoReplyMarkupExample('keyboard')"
+                    >
                       Reply Keyboard
                     </button>
-                    <button type="button" class="example-btn" onclick="setPhotoReplyMarkupExample('remove')">
+                    <button
+                      type="button"
+                      class="example-btn"
+                      onclick="setPhotoReplyMarkupExample('remove')"
+                    >
                       Remove Keyboard
                     </button>
-                    <button type="button" class="example-btn" onclick="setPhotoReplyMarkupExample('force')">
+                    <button
+                      type="button"
+                      class="example-btn"
+                      onclick="setPhotoReplyMarkupExample('force')"
+                    >
                       Force Reply
                     </button>
                   </div>
